# cabpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
.github/workflows/: cmake.yml
cmake/: CABppConfig.cmake.in
examples/: CMakeLists.txt
examples/mutex_example/: CMakeLists.txt  mutex_example.cpp
examples/mutex_example/include/: helper_func.h  mutex_class.h
examples/opencv_example/: CMakeLists.txt  opencv_example.cpp
examples/opencv_example/include/: simple_ui.h  video_func.h
include/: cabpp.h
tests/: CMakeLists.txt  tests_main.cpp
tests/cabpp_elem_tests/: CMakeLists.txt  cabpp_elem_tests.cpp
